--- a/index.html
+++ b/index.html
@@ -537,12 +537,12 @@
 			</div>
 
 			<!--offer container featuring 4 items at a time-->
-			<div class="d-flex">
-				<div class="col-md-12 d-md-flex justify-content-around" style="flex-wrap:wrap">
-					<div class="w-md-50 row my-3">
-						<div class="col">
-							<p class="mb-0">lorem ipsum dolor</p>
-							<p class="mb-0">ut enim ad minim</p>
+			<div class="">
+				<div class="col-md-12 d-md-flex justify-content-between" style="flex-wrap:wrap">
+					<div class="row col-md-6 my-3">
+						<div class="col-5 px-0">
+							<p class="mb-0 text-capitalize">lorem ipsum dolor</p>
+							<p class="mb-0 text-capitalize">ut enim ad minim</p>
 							<div>
 								<i class="material-icons starRate">star_border</i>
 								<i class="material-icons starRate">star_border</i>
@@ -551,8 +551,8 @@
 								<i class="material-icons starRate">star_border</i>
 							</div>
 							<label>
-								<span>$80.00</span>
-								<span>$100.00</span>
+								<span class="fw-bold">$80.00</span>
+								<span class="text-secondary" style="text-decoration: line-through">$100.00</span>
 							</label>
 	
 							<!--add items to cart buttons-->
@@ -561,25 +561,24 @@
 								<button class="ms-1 w-25 bg-white text-primary border border-primary border-1 rounded-1" style="font-size: 0.81rem"><i class="material-icons">favorite</i></button>
 							</div>
 						</div>
-						<div class="position-relative col">
+						<div class="position-relative col-7 px-0">
 							<img src="_img/sale.jfif" class="w-100 h-100" alt="">
-
 							<!--discount label-->
-							<label class="position-absolute bg-warning rounded p-1" style="left: 1rem">
+							<label class="position-absolute bg-success rounded p-1" style="left: 1rem">
 								<span class="text-uppercase text-white fw-bold">new</span>
 							</label>
 	
-							<label class="position-absolute bg-success rounded p-1" style="right: 1rem">
+							<label class="position-absolute bg-warning rounded p-1" style="right: 1rem">
 								<span class="text-uppercase text-white fw-bold">-20%</span>
 							</label>
 						</div>
 					</div>
 
-					<div class="w-md-50 row">
-						<div class="col">
-							<p class="mb-0">lorem ipsum dolor</p>
-							<p>ut enim ad minim</p>
-							<div class="rate">
+					<div class="row col-md-6 my-3">
+						<div class="col-5 px-0">
+							<p class="mb-0 text-capitalize">lorem ipsum dolor</p>
+							<p class="mb-0 text-capitalize">ut enim ad minim</p>
+							<div>
 								<i class="material-icons starRate">star_border</i>
 								<i class="material-icons starRate">star_border</i>
 								<i class="material-icons starRate">star_border</i>
@@ -587,88 +586,86 @@
 								<i class="material-icons starRate">star_border</i>
 							</div>
 							<label>
-								<span class="spcTxtVal">$80.00</span>
-								<span class="spcTxtValDisc">$100.00</span>
+								<span class="fw-bold">$80.00</span>
+								<span class="text-secondary" style="text-decoration: line-through">$100.00</span>
 							</label>
 	
 							<!--add items to cart buttons-->
-							<div>
-								<button class="addCartBtn"><i class="material-icons">local_mall</i>add to cart</button>
-								<button class="addCartBtn"><i class="material-icons">favorite</i></button>
+							<div class="d-flex">
+								<button class="d-flex align-items-center justify-content nw-75 text-capitalize bg-primary text-white border-0 rounded-1" style="font-size: 0.81rem"><i class="material-icons">local_mall</i> add to cart</button>
+								<button class="ms-1 w-25 bg-white text-primary border border-primary border-1 rounded-1" style="font-size: 0.81rem"><i class="material-icons">favorite</i></button>
 							</div>
 						</div>
-						<div class="position-relative col">
-							<img src="_img/sale.jfif" class="img-fluid" alt="">
-
+						<div class="position-relative col-7 px-0">
+							<img src="_img/sale.jfif" class="w-100 h-100" alt="">
 							<!--discount label-->
-							<label class="position-absolute bg-warning rounded p-1" style="left: 1rem">
+							<label class="position-absolute bg-success rounded p-1" style="left: 1rem">
 								<span class="text-uppercase text-white fw-bold">new</span>
 							</label>
 	
-							<label class="position-absolute bg-success rounded p-1" style="right: 1rem">
+							<label class="position-absolute bg-warning rounded p-1" style="right: 1rem">
 								<span class="text-uppercase text-white fw-bold">-20%</span>
 							</label>
 						</div>
 					</div>
 
-
-					<div class="position-relative w-50">
-						<p class="hotTxtTop">lorem ipsum dolor</p>
-						<p class="hotTxtMid">ut enim ad minim veniam</p>
-						<div class="rate">
-							<i class="material-icons starRate">star_border</i>
-							<i class="material-icons starRate">star_border</i>
-							<i class="material-icons starRate">star_border</i>
-							<i class="material-icons starRate">star_border</i>
-							<i class="material-icons starRate">star_border</i>
+					<div class="row col-md-6 my-3">
+						<div class="col-5 px-0">
+							<p class="mb-0 text-capitalize">lorem ipsum dolor</p>
+							<p class="mb-0 text-capitalize">ut enim ad minim</p>
+							<div>
+								<i class="material-icons starRate">star_border</i>
+								<i class="material-icons starRate">star_border</i>
+								<i class="material-icons starRate">star_border</i>
+								<i class="material-icons starRate">star_border</i>
+								<i class="material-icons starRate">star_border</i>
+							</div>
+							<label>
+								<span class="fw-bold">$80.00</span>
+								<span class="text-secondary" style="text-decoration: line-through">$100.00</span>
+							</label>
+	
+							<!--add items to cart buttons-->
+							<div class="d-flex">
+								<button class="d-flex align-items-center justify-content nw-75 text-capitalize bg-primary text-white border-0 rounded-1" style="font-size: 0.81rem"><i class="material-icons">local_mall</i> add to cart</button>
+								<button class="ms-1 w-25 bg-white text-primary border border-primary border-1 rounded-1" style="font-size: 0.81rem"><i class="material-icons">favorite</i></button>
+							</div>
 						</div>
-						<label id="spcTxtValCont">
-							<span class="spcTxtVal">$80.00</span>
-							<span class="spcTxtValDisc">$100.00</span>
-						</label>
-
-						<!--add items to cart buttons-->
-						<div class="addCartCont">
-							<button class="addCartBtn"><i class="material-icons">local_mall</i>add to cart</button>
-							<button class="addCartBtn"><i class="material-icons">favorite</i></button>
+						<div class="position-relative col-7 px-0">
+							<img src="_img/sale.jfif" class="w-100 h-100" alt="">
+							<!--discount label-->
+							<label class="position-absolute bg-warning rounded p-1" style="right: 1rem">
+								<span class="text-uppercase text-white fw-bold">-20%</span>
+							</label>
 						</div>
-
-						<!--discount label-->
-						<label class="variSideImg">
-							<span class="new">new</span>
-							<span class="desc">-20%</span>
-						</label>
 					</div>
 
-
-					<div class="position-relative w-50">
-						<p class="hotTxtTop">lorem ipsum dolor</p>
-						<p class="hotTxtMid">ut enim ad minim veniam</p>
-						<div class="rate">
-							<i class="material-icons starRate">star_border</i>
-							<i class="material-icons starRate">star_border</i>
-							<i class="material-icons starRate">star_border</i>
-							<i class="material-icons starRate">star_border</i>
-							<i class="material-icons starRate">star_border</i>
+					<div class="row col-md-6 my-3">
+						<div class="col-5 px-0">
+							<p class="mb-0 text-capitalize">lorem ipsum dolor</p>
+							<p class="mb-0 text-capitalize">ut enim ad minim</p>
+							<div>
+								<i class="material-icons starRate">star_border</i>
+								<i class="material-icons starRate">star_border</i>
+								<i class="material-icons starRate">star_border</i>
+								<i class="material-icons starRate">star_border</i>
+								<i class="material-icons starRate">star_border</i>
+							</div>
+							<label>
+								<span class="fw-bold">$80.00</span>
+								<span class="text-secondary" style="text-decoration: line-through">$100.00</span>
+							</label>
+	
+							<!--add items to cart buttons-->
+							<div class="d-flex">
+								<button class="d-flex align-items-center justify-content nw-75 text-capitalize bg-primary text-white border-0 rounded-1" style="font-size: 0.81rem"><i class="material-icons">local_mall</i> add to cart</button>
+								<button class="ms-1 w-25 bg-white text-primary border border-primary border-1 rounded-1" style="font-size: 0.81rem"><i class="material-icons">favorite</i></button>
+							</div>
 						</div>
-						<label id="spcTxtValCont">
-							<span class="spcTxtVal">$80.00</span>
-							<span class="spcTxtValDisc">$100.00</span>
-						</label>
-
-						<!--add items to cart buttons-->
-						<div class="addCartCont">
-							<button class="addCartBtn"><i class="material-icons">local_mall</i>add to cart</button>
-							<button class="addCartBtn"><i class="material-icons">favorite</i></button>
+						<div class="col-7 px-0">
+							<img src="_img/sale.jfif" class="w-100 h-100" alt="">
 						</div>
-
-						<!--discount label-->
-						<label class="variSideImg">
-							<span class="new">new</span>
-							<span class="desc">-20%</span>
-						</label>
 					</div>
-
 				</div>
 			</div>
 
