--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		</div>
 
 		<!--categories container-->
-		<div class="row justify-content-center p-2 bg-primary">
+		<nav class="row justify-content-center p-2 bg-primary">
 			<div class="col-lg d-flex justify-content-center">
 				<select class="rounded my-1 p-1 border-0 text-capitalize text-white bg-primary" aria-label="select a product category" role="button">
 					<option class="bg-white text-body" selected>all categories</option>
@@ -146,7 +146,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</nav>
 
 		<!--promo container-->
 		<main class="position-relative row d-flex justify-content-center">
@@ -544,10 +544,45 @@
 							<p class="mb-0 text-capitalize">lorem ipsum dolor</p>
 							<p class="mb-0 text-capitalize">ut enim ad minim</p>
 							<div>
-								<i class="material-icons starRate">star_border</i>
-								<i class="material-icons starRate">star_border</i>
-								<i class="material-icons starRate">star_border</i>
-								<i class="material-icons starRate">star_border</i>
+								<i class="material-icons starRate">star_rate</i>
+								<i class="material-icons starRate">star_rate</i>
+								<i class="material-icons starRate">star_rate</i>
+								<i class="material-icons starRate">star_rate</i>
+								<i class="material-icons starRate">star_rate</i>
+							</div>
+							<label>
+								<span class="fw-bold">$80.00</span>
+								<span class="text-secondary" style="text-decoration: line-through">$100.00</span>
+							</label>
+	
+							<!--add items to cart buttons-->
+							<div class="d-flex">
+								<button class="d-flex align-items-center justify-content nw-75 text-capitalize bg-primary text-white border-0 rounded-1" style="font-size: 0.81rem"><i class="material-icons">local_mall</i> add to cart</button>
+								<button class="ms-1 w-25 bg-white text-primary border border-primary border-1 rounded-1" style="font-size: 0.81rem"><i class="material-icons">favorite</i></button>
+							</div>
+						</div>
+						<div class="position-relative col-7 px-0">
+							<img src="_img/sale.jfif" class="w-100 h-100" alt="">
+							<!--discount label-->
+							<label class="position-absolute bg-success rounded p-1" style="left: 1rem">
+								<span class="text-uppercase text-white fw-bold">new</span>
+							</label>
+	
+							<label class="position-absolute bg-warning rounded p-1" style="right: 1rem">
+								<span class="text-uppercase text-white fw-bold">-20%</span>
+							</label>
+						</div>
+					</div>
+
+					<div class="row col-md-6 my-3">
+						<div class="col-5 px-0">
+							<p class="mb-0 text-capitalize">lorem ipsum dolor</p>
+							<p class="mb-0 text-capitalize">ut enim ad minim</p>
+							<div>
+								<i class="material-icons starRate">star_rate</i>
+								<i class="material-icons starRate">star_rate</i>
+								<i class="material-icons starRate">star_rate</i>
+								<i class="material-icons starRate">star_rate</i>
 								<i class="material-icons starRate">star_border</i>
 							</div>
 							<label>
@@ -579,44 +614,9 @@
 							<p class="mb-0 text-capitalize">lorem ipsum dolor</p>
 							<p class="mb-0 text-capitalize">ut enim ad minim</p>
 							<div>
-								<i class="material-icons starRate">star_border</i>
-								<i class="material-icons starRate">star_border</i>
-								<i class="material-icons starRate">star_border</i>
-								<i class="material-icons starRate">star_border</i>
-								<i class="material-icons starRate">star_border</i>
-							</div>
-							<label>
-								<span class="fw-bold">$80.00</span>
-								<span class="text-secondary" style="text-decoration: line-through">$100.00</span>
-							</label>
-	
-							<!--add items to cart buttons-->
-							<div class="d-flex">
-								<button class="d-flex align-items-center justify-content nw-75 text-capitalize bg-primary text-white border-0 rounded-1" style="font-size: 0.81rem"><i class="material-icons">local_mall</i> add to cart</button>
-								<button class="ms-1 w-25 bg-white text-primary border border-primary border-1 rounded-1" style="font-size: 0.81rem"><i class="material-icons">favorite</i></button>
-							</div>
-						</div>
-						<div class="position-relative col-7 px-0">
-							<img src="_img/sale.jfif" class="w-100 h-100" alt="">
-							<!--discount label-->
-							<label class="position-absolute bg-success rounded p-1" style="left: 1rem">
-								<span class="text-uppercase text-white fw-bold">new</span>
-							</label>
-	
-							<label class="position-absolute bg-warning rounded p-1" style="right: 1rem">
-								<span class="text-uppercase text-white fw-bold">-20%</span>
-							</label>
-						</div>
-					</div>
-
-					<div class="row col-md-6 my-3">
-						<div class="col-5 px-0">
-							<p class="mb-0 text-capitalize">lorem ipsum dolor</p>
-							<p class="mb-0 text-capitalize">ut enim ad minim</p>
-							<div>
-								<i class="material-icons starRate">star_border</i>
-								<i class="material-icons starRate">star_border</i>
-								<i class="material-icons starRate">star_border</i>
+								<i class="material-icons starRate">star_rate</i>
+								<i class="material-icons starRate">star_rate</i>
+								<i class="material-icons starRate">star_rate</i>
 								<i class="material-icons starRate">star_border</i>
 								<i class="material-icons starRate">star_border</i>
 							</div>
@@ -674,8 +674,8 @@
 </div>
 
 		<!--footer-->
-		<footer class="p-2 col-md-9 text-center">
-			<p>desenvolvido por <a href="https://jeimoal.github.io/portifolio/">Jeison Moura</a></p>
+		<footer class="p-2 col-md-9 text-center bg-secondary">
+			<p class="mb-0 p-2">Desenvolvido por <a href="https://jeimoal.github.io/portifolio/" class="text-body">Jeison Moura</a></p>
 		</footer>
 	</div>
 </body>
