--- a/index.html
+++ b/index.html
@@ -503,37 +503,61 @@
 
 			<!--miniImages buttons-->
 			<div class="d-flex justify-content-between">
+				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
 						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
+					<p class="mb-0 text-capitalize text-center">bags</p>
+				</div>
 
+				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
 						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
+					<p class="mb-0 text-capitalize text-center">dress</p>
+				</div>
 
+				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
 						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
+					<p class="mb-0 text-capitalize text-center">jeans</p>
+				</div>
 
+				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
 						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
+					<p class="mb-0 text-capitalize text-center">mens</p>
+				</div>
 
+				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
 						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
+					<p class="mb-0 text-capitalize text-center">t-shirt</p>
+				</div>
 
+				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
 						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
+					<p class="mb-0 text-capitalize text-center">trending</p>
+				</div>
 
+				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
 						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
+					<p class="mb-0 text-capitalize text-center">western</p>
+				</div>
 
+				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
 						<img src="_img/button.jpg" class="img-fluid" alt="">
 					</button>
+					<p class="mb-0 text-capitalize text-center">women</p>
+				</div>
 			</div>
 
 			<!--offer container featuring 4 items at a time-->
