--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
 			</div>
 
 			<!--miniImages buttons-->
-			<div class="d-flex justify-content-between">
+			<div class="d-flex justify-content-around" style="flex-wrap: wrap">
 				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
 						<img src="_img/button.jpg" class="img-fluid" alt="">
@@ -562,8 +562,8 @@
 
 			<!--offer container featuring 4 items at a time-->
 			<div class="">
-				<div class="col-md-12 d-md-flex justify-content-between" style="flex-wrap:wrap">
-					<div class="row col-md-6 my-3">
+				<div class="col-md-12 d-md-flex justify-content-around" style="flex-wrap:wrap">
+					<div class="row col-md-6 my-3 p-2">
 						<div class="col-5 px-0">
 							<p class="mb-0 text-capitalize">lorem ipsum dolor</p>
 							<p class="mb-0 text-capitalize">ut enim ad minim</p>
@@ -598,7 +598,7 @@
 						</div>
 					</div>
 
-					<div class="row col-md-6 my-3">
+					<div class="row col-md-6 my-3 p-2">
 						<div class="col-5 px-0">
 							<p class="mb-0 text-capitalize">lorem ipsum dolor</p>
 							<p class="mb-0 text-capitalize">ut enim ad minim</p>
@@ -633,7 +633,7 @@
 						</div>
 					</div>
 
-					<div class="row col-md-6 my-3">
+					<div class="row col-md-6 my-3 p-2">
 						<div class="col-5 px-0">
 							<p class="mb-0 text-capitalize">lorem ipsum dolor</p>
 							<p class="mb-0 text-capitalize">ut enim ad minim</p>
@@ -664,7 +664,7 @@
 						</div>
 					</div>
 
-					<div class="row col-md-6 my-3">
+					<div class="row col-md-6 my-3 p-2">
 						<div class="col-5 px-0">
 							<p class="mb-0 text-capitalize">lorem ipsum dolor</p>
 							<p class="mb-0 text-capitalize">ut enim ad minim</p>
