--- a/index.html
+++ b/index.html
@@ -698,8 +698,8 @@
 </div>
 
 		<!--footer-->
-		<footer class="p-2 col-md-12 text-center bg-secondary">
-			<p class="mb-0 p-2">Desenvolvido por <a href="https://jeimoal.github.io/portifolio/" class="text-body">Jeison Moura</a></p>
+		<footer class="p-2 col-md-12 text-center bg-primary">
+			<p class="mb-0 p-2">Desenvolvido por <a href="https://jeimoal.github.io/portifolio/" class="text-white">Jeison Moura</a></p>
 		</footer>
 	</div>
 </body>
