--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 	<title>Best e-commerce page ever</title>
-	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 </head>
 <body>
 	<div class="row justify-content-center">
@@ -160,19 +160,19 @@
 
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
+						<img src="./_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
 					</div>
 	
 					<div class="carousel-item active">
-						<img src="_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
+						<img src="./_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
 					</div>
 	
 					<div class="carousel-item active">
-						<img src="_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
+						<img src="./_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
 					</div>
 
 					<div class="carousel-item active">
-						<img src="_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
+						<img src="./_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
 					</div>
 				</div>
 
@@ -185,12 +185,12 @@
 			</div>
 
 			<div class="miniPromo row col">
-				<img src="_img/sale.jfif" class="w-50 p-2" alt="image of a product on sale" role="button">
-				<img src="_img/sale.jfif" class="w-50 p-2" alt="image of a product on sale" role="button">
-				<img src="_img/sale.jfif" class="w-50 p-2" alt="image of a product on sale" role="button">
-				<img src="_img/sale.jfif" class="w-50 p-2" alt="image of a product on sale" role="button">
-				<img src="_img/sale.jfif" class="w-50 p-2" alt="image of a product on sale" role="button">
-				<img src="_img/sale.jfif" class="w-50 p-2" alt="image of a product on sale" role="button">
+				<img src="./_img/sale.jfif" class="w-50 p-2" alt="image of a product on sale" role="button">
+				<img src="./_img/sale.jfif" class="w-50 p-2" alt="image of a product on sale" role="button">
+				<img src="./_img/sale.jfif" class="w-50 p-2" alt="image of a product on sale" role="button">
+				<img src="./_img/sale.jfif" class="w-50 p-2" alt="image of a product on sale" role="button">
+				<img src="./_img/sale.jfif" class="w-50 p-2" alt="image of a product on sale" role="button">
+				<img src="./_img/sale.jfif" class="w-50 p-2" alt="image of a product on sale" role="button">
 			</div>
 		</main>
 
@@ -242,42 +242,42 @@
 		<div class="d-flex justify-content-center px-4 m-5">
 			<a href="#" target="" class="d-flex justify-content-center col-2">
 				<figure class="position-relative border border-2 rounded-circle" style="overflow: hidden">
-					<img src="_img/categ.jfif" alt="" class="rounded-circle img-fluid">
+					<img src="./_img/categ.jfif" alt="" class="rounded-circle img-fluid">
 					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1em;">digital</figcaption>
 				</figure>
 			</a>
 
 			<a href="#" target="" class="d-flex justify-content-center col-2">
 				<figure class="position-relative border border-2 rounded-circle" style="overflow: hidden">
-					<img src="_img/categ.jfif" alt="" class="rounded-circle img-fluid">
+					<img src="./_img/categ.jfif" alt="" class="rounded-circle img-fluid">
 					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1em">fashion</figcaption>
 				</figure>
 			</a>
 
 			<a href="#" target="" class="d-flex justify-content-center col-2">
 				<figure class="position-relative border border-2 rounded-circle" style="overflow: hidden">
-					<img src="_img/categ.jfif" alt="" class="rounded-circle img-fluid">
+					<img src="./_img/categ.jfif" alt="" class="rounded-circle img-fluid">
 					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1em">food</figcaption>
 				</figure>
 			</a>
 
 			<a href="#" target="" class="d-flex justify-content-center col-2">
 				<figure class="position-relative border border-2 rounded-circle" style="overflow: hidden">
-					<img src="_img/categ.jfif" alt="" class="rounded-circle img-fluid">
+					<img src="./_img/categ.jfif" alt="" class="rounded-circle img-fluid">
 					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1em">health</figcaption>
 				</figure>
 			</a>
 
 			<a href="#" target="" class="d-flex justify-content-center col-2">
 				<figure class="position-relative border border-2 rounded-circle" style="overflow: hidden">
-					<img src="_img/categ.jfif" alt="" class="rounded-circle img-fluid">
+					<img src="./_img/categ.jfif" alt="" class="rounded-circle img-fluid">
 					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1em">spa</figcaption>
 				</figure>
 			</a>
 
 			<a href="#" target="" class="d-flex justify-content-center col-2">
 				<figure class="position-relative border border-2 rounded-circle" style="overflow: hidden">
-					<img src="_img/categ.jfif" alt="" class="rounded-circle img-fluid">
+					<img src="./_img/categ.jfif" alt="" class="rounded-circle img-fluid">
 					<figcaption class="w-100 bg-white text-center text-uppercase text-body position-absolute" style="bottom:1em">travel</figcaption>
 				</figure>
 			</a>
@@ -290,7 +290,7 @@
 		<!--side container-->
 		<div>
 			<div class="d-flex">
-				<img src="_img/qrcode.jpg" alt="" class="ms-2 w-25">
+				<img src="./_img/qrcode.jpg" alt="" class="ms-2 w-25">
 				<div class="ms-2">
 					<p class="fw-bold text-capitalize">enjoy convenient order tracking</p>
 					<span class="text-capitalize">scan to download app</span>
@@ -304,7 +304,7 @@
 				</label>
 				<div class="w-100 border border-1 rounded-bottom">
 					<div class="w-100 p-3 d-flex">
-						<img src="_img/sale.jfif" class="w-25" alt="">
+						<img src="./_img/sale.jfif" class="w-25" alt="">
 						<div class="ms-3">
 							<p class="text-body mb-0">lorem ipsum dolor sit</p>
 							<p class="text-body mb-0">ut enim ad minim</p>
@@ -316,7 +316,7 @@
 					</div>
 
 					<div class="w-100 p-3 d-flex">
-						<img src="_img/sale.jfif" class="w-25" alt="">
+						<img src="./_img/sale.jfif" class="w-25" alt="">
 						<div class="ms-3">
 							<p class="text-body mb-0">lorem ipsum dolor sit</p>
 							<p class="text-body mb-0">ut enim ad minim</p>
@@ -328,7 +328,7 @@
 					</div>
 
 					<div class="w-100 p-3 d-flex">
-						<img src="_img/sale.jfif" class="w-25" alt="">
+						<img src="./_img/sale.jfif" class="w-25" alt="">
 						<div class="ms-3">
 							<p class="text-body mb-0">lorem ipsum dolor sit</p>
 							<p class="text-body mb-0">ut enim ad minim</p>
@@ -340,7 +340,7 @@
 					</div>
 
 					<div class="w-100 p-3 d-flex">
-						<img src="_img/sale.jfif" class="w-25" alt="">
+						<img src="./_img/sale.jfif" class="w-25" alt="">
 						<div class="ms-3">
 							<p class="text-body mb-0">lorem ipsum dolor sit</p>
 							<p class="text-body mb-0">ut enim ad minim</p>
@@ -352,7 +352,7 @@
 					</div>
 
 					<div class="w-100 p-3 d-flex">
-						<img src="_img/sale.jfif" class="w-25" alt="">
+						<img src="./_img/sale.jfif" class="w-25" alt="">
 						<div class="ms-3">
 							<p class="text-body mb-0">lorem ipsum dolor sit</p>
 							<p class="text-body mb-0">ut enim ad minim</p>
@@ -367,7 +367,7 @@
 			</div>
 
 			<div class="my-2" style="height: 40rem">
-				<img src="_img/sale.jfif" class="h-100 w-100 rounded" alt="the body shop - mother nature's seal of approval">
+				<img src="./_img/sale.jfif" class="h-100 w-100 rounded" alt="the body shop - mother nature's seal of approval">
 			</div>
 
 			<div class="w-100">
@@ -376,7 +376,7 @@
 					<span class="fw-bold align-middle">recommended items</span>
 				</div>
 				<div class="position-relative w-100 border border-1 rounded-bottom">
-					<img src="_img/sale.jfif" class="w-100 p-3" alt="">
+					<img src="./_img/sale.jfif" class="w-100 p-3" alt="">
 					<span class="position-absolute bg-warning" style="right: 4rem; top: 4rem">-42%</span>
 					<p class="mb-0 ps-3">lorem ipsum dolor</p>
 					<p class="mb-0 ps-3">ut enim ad minim veniam</p>
@@ -406,7 +406,7 @@
 
 			<div class="p-2 d-md-flex justify-content-around">
 				<div class="col m-2 row justify-content-around">
-					<img src="_img/sale.jfif" class="hotImg" alt="">
+					<img src="./_img/sale.jfif" class="hotImg" alt="">
 					<div class="mt-2">
 						<p class="mb-0">lorem ipsum dolor</p>
 						<p class="mb-0">ut enim ad minim veniam</p>
@@ -425,7 +425,7 @@
 				</div>
 
 				<div class="col m-2 row justify-content-around">
-					<img src="_img/sale.jfif" class="hotImg" alt="">
+					<img src="./_img/sale.jfif" class="hotImg" alt="">
 					<div class="mt-2">
 						<p class="mb-0">lorem ipsum dolor</p>
 						<p class="mb-0">ut enim ad minim veniam</p>
@@ -444,7 +444,7 @@
 				</div>
 
 				<div class="col m-2 row justify-content-around">
-					<img src="_img/sale.jfif" class="hotImg" alt="">
+					<img src="./_img/sale.jfif" class="hotImg" alt="">
 					<div class="mt-2">
 						<p class="mb-0">lorem ipsum dolor</p>
 						<p class="mb-0">ut enim ad minim veniam</p>
@@ -463,7 +463,7 @@
 				</div>
 
 				<div class="col m-2 row justify-content-around">
-					<img src="_img/sale.jfif" class="hotImg" alt="">
+					<img src="./_img/sale.jfif" class="hotImg" alt="">
 					<div class="mt-2">
 						<p class="mb-0">lorem ipsum dolor</p>
 						<p class="mb-0">ut enim ad minim veniam</p>
@@ -485,7 +485,7 @@
 
 		<!--promotional banner container-->
 		<div class="p-2 col-md-12 mx-auto">
-			<img src="_img/discount.jfif" class="w-100" alt="banner with a promotional image. 50% discount guaranted on some items">
+			<img src="./_img/discount.jfif" class="w-100" alt="banner with a promotional image. 50% discount guaranted on some items">
 		</div>
 
 		<!--variety container-->
@@ -505,56 +505,56 @@
 			<div class="d-flex justify-content-around" style="flex-wrap: wrap">
 				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
-						<img src="_img/button.jpg" class="img-fluid" alt="">
+						<img src="./_img/button.jpg" class="img-fluid" alt="">
 					</button>
 					<p class="mb-0 text-capitalize text-center">bags</p>
 				</div>
 
 				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
-						<img src="_img/button.jpg" class="img-fluid" alt="">
+						<img src="./_img/button.jpg" class="img-fluid" alt="">
 					</button>
 					<p class="mb-0 text-capitalize text-center">dress</p>
 				</div>
 
 				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
-						<img src="_img/button.jpg" class="img-fluid" alt="">
+						<img src="./_img/button.jpg" class="img-fluid" alt="">
 					</button>
 					<p class="mb-0 text-capitalize text-center">jeans</p>
 				</div>
 
 				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
-						<img src="_img/button.jpg" class="img-fluid" alt="">
+						<img src="./_img/button.jpg" class="img-fluid" alt="">
 					</button>
 					<p class="mb-0 text-capitalize text-center">mens</p>
 				</div>
 
 				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
-						<img src="_img/button.jpg" class="img-fluid" alt="">
+						<img src="./_img/button.jpg" class="img-fluid" alt="">
 					</button>
 					<p class="mb-0 text-capitalize text-center">t-shirt</p>
 				</div>
 
 				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
-						<img src="_img/button.jpg" class="img-fluid" alt="">
+						<img src="./_img/button.jpg" class="img-fluid" alt="">
 					</button>
 					<p class="mb-0 text-capitalize text-center">trending</p>
 				</div>
 
 				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
-						<img src="_img/button.jpg" class="img-fluid" alt="">
+						<img src="./_img/button.jpg" class="img-fluid" alt="">
 					</button>
 					<p class="mb-0 text-capitalize text-center">western</p>
 				</div>
 
 				<div>
 					<button class="btn-sm mx-1 my-4 p-0 bg-white border-0">
-						<img src="_img/button.jpg" class="img-fluid" alt="">
+						<img src="./_img/button.jpg" class="img-fluid" alt="">
 					</button>
 					<p class="mb-0 text-capitalize text-center">women</p>
 				</div>
@@ -586,7 +586,7 @@
 							</div>
 						</div>
 						<div class="position-relative col-7 px-0">
-							<img src="_img/sale.jfif" class="w-100 h-100" alt="">
+							<img src="./_img/sale.jfif" class="w-100 h-100" alt="">
 							<!--discount label-->
 							<label class="position-absolute bg-success rounded p-1" style="left: 1rem">
 								<span class="text-uppercase text-white fw-bold">new</span>
@@ -621,7 +621,7 @@
 							</div>
 						</div>
 						<div class="position-relative col-7 px-0">
-							<img src="_img/sale.jfif" class="w-100 h-100" alt="">
+							<img src="./_img/sale.jfif" class="w-100 h-100" alt="">
 							<!--discount label-->
 							<label class="position-absolute bg-success rounded p-1" style="left: 1rem">
 								<span class="text-uppercase text-white fw-bold">new</span>
@@ -656,7 +656,7 @@
 							</div>
 						</div>
 						<div class="position-relative col-7 px-0">
-							<img src="_img/sale.jfif" class="w-100 h-100" alt="">
+							<img src="./_img/sale.jfif" class="w-100 h-100" alt="">
 							<!--discount label-->
 							<label class="position-absolute bg-warning rounded p-1" style="right: 1rem">
 								<span class="text-uppercase text-white fw-bold">-20%</span>
@@ -687,7 +687,7 @@
 							</div>
 						</div>
 						<div class="col-7 px-0">
-							<img src="_img/sale.jfif" class="w-100 h-100" alt="">
+							<img src="./_img/sale.jfif" class="w-100 h-100" alt="">
 						</div>
 					</div>
 				</div>
