--- a/index.html
+++ b/index.html
@@ -160,19 +160,19 @@
 
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
+						<img src="../_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
 					</div>
 	
 					<div class="carousel-item active">
-						<img src="./_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
+						<img src="../_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
 					</div>
 	
 					<div class="carousel-item active">
-						<img src="./_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
+						<img src="../_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
 					</div>
 
 					<div class="carousel-item active">
-						<img src="./_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
+						<img src="../_img/sale.jfif" alt="image of a product on sale" class="d-block w-100">
 					</div>
 				</div>
 
